--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
     margin: 0;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     height: 100%;
+    box-sizing: border-box;
 }
 
 #content {
@@ -17,7 +20,6 @@ body {
 }
 
 .key, .opKey, #clear, #backSpace {
-    box-sizing: border-box;
     width: 80px;
     height: 80px;
     font-size: 35px;
@@ -25,6 +27,7 @@ body {
     border-radius: 25px;
     font-weight: bold;
     border: 2px solid rgb(66, 66, 66);
+    transition: 0.3s;
 }
 
 .key:hover, #clear:hover, #backSpace:hover {
@@ -57,7 +60,7 @@ body {
 #display {
     height: 100px;
     width: auto;
-    background-color: #131313;
+    background-color: white;
     display: flex;
     flex-direction: column;
     flex: 1;
